--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -22,19 +22,21 @@
 .sele-navbar > li > a {
     border-radius: 10px;
     margin: 5px;
-    padding: 2px 10px;
+    padding: 1px 15px;
     display: block;
 }
 
 .sele-svg-logo {
-    width: 130px;
+    width: 150px;
     height: 50px;
 }
 
+.sele-navbar > li.sele-navbar-items.active > a > .sele-navbar-text,
 .sele-navbar > li.sele-navbar-items > a:hover > .sele-navbar-text {
     color: #FFC200;
 }
 
+.sele-navbar > li.sele-navbar-items.active > a,
 .sele-navbar > li.sele-navbar-items > a:hover {
     display: block;
     background-color: #242B52;
